--- a/main.css
+++ b/main.css
@@ -7,3 +7,74 @@
     font-weight: 400;
     font-style: normal;
 }
+
+body {
+    background-color: black;
+    color: whitesmoke;
+    padding: 2rem 1rem;
+    min-height: 100vh;
+}
+
+h1 {
+    text-align: left;
+}
+
+#header {
+    padding: 1rem 0;
+}
+
+#header,
+#header h3,
+#header p {
+    text-align: center;
+}
+
+.name {
+    font-size: 2em;
+}
+
+.equ {
+    font-size: 1.5rem;
+}
+
+a,
+a:link,
+a:visited {
+    color: rgb(0, 183, 255);
+    font-weight: 700;
+    padding: 1rem 0;
+    margin-top: 0.3rem;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
+a::before {
+    content: "[";
+}
+
+a::after {
+    content: "]";
+}
+
+ul {
+    padding: 0 1.3rem;
+}
+
+li {
+    margin: 1rem 0;
+}
+
+section {
+    margin: 2em 0;
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        padding: 0 15%;
+    }
+
+    h1 {
+        padding-top: 1rem;
+        text-align: center;
+    }
+}
